--- a/Wholesale Customer Spending Clustering.Rmd
+++ b/Wholesale Customer Spending Clustering.Rmd
@@ -195,6 +195,30 @@ ggplot(data, aes(milk, fro)) +
 
 ## Clustering
 
+```{r}
+#normalize the data and put into a new object
+# 2 is for the columns (1 is for rows)
+data_mean <- apply(data, 2, mean)
+data_sd <- apply(data, 2, sd)
+data_norm <-scale(data, data_mean, data_sd)
+
+#calc Euclidean Distance
+distance <- dist(data_norm)
+```
+
+```{r}
+#cluster dendrogram with complete linkage
+data_hcc <-hclust(distance)
+
+plot(data_hcc)
+```
+Each observation is treated as a single cluster and they are group with the nearest observation and they form a cluster. Then that cluster finds anothre observation and they form another cluster. This process repeats til you reach all observation form 1 cluster. In our case, when the Height=20. This is a **"Complete Linkage"**.
+
+```{r}
+#cluster Dendrogram with average linkage
+data_hca <- hclust(distance, method='average')
+plot(data_hca)
+```
 
 
 ## Limitations
