Monday Night Push

--- a/Wholesale Customer Spending Clustering.Rmd
+++ b/Wholesale Customer Spending Clustering.Rmd
@@ -42,6 +42,7 @@ library(tidyverse)
 library(janitor)
 library(scales)
 library(ggplot2)
+library(dendextend)
 
 ```
 
@@ -212,14 +213,38 @@ data_hcc <-hclust(distance)
 
 plot(data_hcc)
 ```
+
 Each observation is treated as a single cluster and they are group with the nearest observation and they form a cluster. Then that cluster finds anothre observation and they form another cluster. This process repeats til you reach all observation form 1 cluster. In our case, when the Height=20. This is a **"Complete Linkage"**.
 
+Let' try the average.
 ```{r}
 #cluster Dendrogram with average linkage
 data_hca <- hclust(distance, method='average')
-plot(data_hca)
+plot(data_hca, hang= -1, cex=0.5)
 ```
 
+OK, moving forward let's move on with average.
+
+Let's find another way to visualize.
+```{r}
+library(ape)
+plot(as.phylo(data_hca), type = 'fan')
+```
+
+Let's cut the tree by choosing k. I will use the average instead of the complete. Since the height is alight above 15, I will choose k to be slightly above half, which is 8. 
+```{r}
+#create dendrogram object
+data_hca_object <- as.dendrogram(data_hca)
+
+#color
+data_hca_object_dend <-color_branches(data_hca_object, h=8)
+plot(data_hca_object_dend,
+     leaflab = 'none',
+     ylab = 'Height',
+     xlab = 'Clusters',
+     main = 'Custering Wholesale Customers') +
+  abline(h = 8, lty = 2)
+```
 
 ## Limitations
 
