Added content to Cluster section

--- a/Wholesale Customer Spending Clustering via Heirarchal Clustering.Rmd
+++ b/Wholesale Customer Spending Clustering via Heirarchal Clustering.Rmd
@@ -215,6 +215,18 @@ The distance between two clusters is based on the **Euclidean distance**. In ord
 
 </center>
 
+### Applications
+
+### Pros
+
+* Easy to understand and implement
+* Works relatively well on small data sets
+* Do not have to indicate any particular number of clusters (cut at appropiate levels such as whole vs average
+
+### Cons
+
+* Does not work well with large datasets. This is an issue because many business and organizational datasets tend to be large >100K and visually condensing is difficult. 
+* Computatonal demanding. 
 
 ```{r}
 #normalize the data and put into a new object
