added content to Clustering section

--- a/Wholesale Customer Spending Clustering via Heirarchal Clustering.Rmd
+++ b/Wholesale Customer Spending Clustering via Heirarchal Clustering.Rmd
@@ -227,7 +227,9 @@ ggplot(data, aes(milk, fro)) +
 
 ## Hierarchical Clustering
 
-Hierarchical clustering treats each observation as distinct cluster, also called **agglomerative**. Then it 1) merges two clusters closest together (via distance) and 2) merges those clusters together and repeats thsu process until all clusters are merged as one. 
+Hierarchical clustering treats each observation as distinct cluster, also called **Agglomerative**. Then it 1) merges two clusters closest together (via distance) and 2) merges those clusters together and repeats thsu process until all clusters are merged as one. 
+
+The other type of Hierachical clustering is **Divisive**, a process where all the data is grouped into one big cluster and then are de-merges into clusters. This is the opposite of agglomerative. 
 
 <center>
 ![](https://cdn-dfnaj.nitrocdn.com/xxeFXDnBIOflfPsgwjDLywIQwPChAOzV/assets/static/optimized/rev-a7a8c30/wp-content/uploads/2018/03/Hierarchical-clustering-3-1.png){width=50%}
@@ -245,6 +247,10 @@ The distance between two clusters is based on the **Euclidean distance**. In ord
 </center>
 
 ### Applications
+
+* Bioinfomatics.  Group bacteria based on their genes, proteins, receptors,etc. The possibles are endless. 
+* Image processing. Hand written characters can be grouped based on the character shape.
+* Business. Group customers into segments based on purchase behavior, location, purchange frequency, etc.
 
 ### Pros
 
